# Hackaton-HEBI-2026

./: .gitignore  README.md  labels.txt  main.py  pyproject.toml  run.sh  run_pipeline.py
core/: analytics.py  base_model.py
docs/: EDA.md  EVENTS.md  FREQUENCY.md  MODEL.md  PIPELINE.md  PREPROCESSING.md  detected_events.txt  frequency_summary.txt
models/: random_forest_v2.py
output/: productivity_report.md
scripts/: attitude_analysis.py  correlation_analysis.py  create_first_8_min_sync.py  create_random_ai_clip.py  create_sync_video.py  eda.py  event_detection.py  feature_enrichment.py  frequency_analysis.py  label_validation.py  linear_accel_extraction.py  segmentation_app.py  train_activity_classifier.py  video_segmentation.py  video_sync_prep.py  visualize_importance.py
scripts/Tests_model/: 01_robust_label_parser.py  02_hierarchical_trainer.py  03_eval_generalization.py
scripts/pre_ai_post/: 01_clean_and_refine.py  02_feature_generation.py  03_model_training.py  04_inference_report.py  05_visual_sync_ai.py
